crates/wdl-analysis/tests/validation/struct-metadata-unsupported/source.errors
error: use of a `meta` section in a struct definition requires WDL version 1.2
  ┌─ tests/validation/struct-metadata-unsupported/source.wdl:6:5
  │
6 │     meta {
  │     ^^^^

error: use of a `parameter_meta` section in a struct definition requires WDL version 1.2
   ┌─ tests/validation/struct-metadata-unsupported/source.wdl:10:5
   │
10 │     parameter_meta {
   │     ^^^^^^^^^^^^^^

